force-app/main/default/objects/TAD_Order__c/fields/Is_Qf_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Qf_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qantas Tour</label>
    <type>Checkbox</type>
</CustomField>