force-app/main/default/objects/TAD_Order__c/fields/Is_Siteminder_TravelClick__c.field-meta.xml
<CustomField>
    <fullName>Is_Siteminder_TravelClick__c</fullName>
    <formula>IF(AND(
ordexp_deal__r.RecordType.Name = &quot;Hotel&quot;,
NOT(ISNULL(TEXT(ordexp_deal__r.Channel_Partner__c)))
),&quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Result of this field = Is this a Siteminder or TravelClick deal?</inlineHelpText>
    <label>Is Siteminder/TravelClick?</label>
    <type>Text</type>
</CustomField>