force-app/main/default/objects/TAD_Order__c/fields/Is_Web_Agent_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Web_Agent_Available__c</fullName>
    <formula>NOT(ISBLANK(Web_Agent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Web Agent Available</label>
    <type>Checkbox</type>
</CustomField>