force-app/main/default/objects/TAD_Order__c/fields/isAcknowledged__c.field-meta.xml
<CustomField>
    <fullName>isAcknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAcknowledged</label>
    <type>Checkbox</type>
</CustomField>