force-app/main/default/objects/TAD_Order__c/fields/Legacy_Order_Conversion_Error__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Order_Conversion_Error__c</fullName>
    <label>Legacy Order Conversion Error</label>
    <type>TextArea</type>
</CustomField>