force-app/main/default/objects/TAD_Order__c/fields/Legacy_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Surcharge__c</fullName>
    <formula>order__r.Total_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>