force-app/main/default/objects/TAD_Order__c/fields/Link_token__c.field-meta.xml
<CustomField>
    <fullName>Link_token__c</fullName>
    <label>Link token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>