force-app/main/default/objects/TAD_Order__c/fields/Linking_Orders__c.field-meta.xml
<CustomField>
    <fullName>Linking_Orders__c</fullName>
    <inlineHelpText>This field is showing information from any MIGRATED orders only. This field is not to be used for any new POE orders. This is either - 
Order Number (migrated number) OR Full name of friend (if order number not known)</inlineHelpText>
    <label>Linking Orders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>