force-app/main/default/objects/TAD_Order__c/fields/Marketing_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Survey_Type__c</fullName>
    <label>Marketing Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feefo</fullName>
            </value>
            <value>
                <fullName>Qualtrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>