force-app/main/default/objects/TAD_Order__c/fields/MERCHANT_BOOKING_URL__c.field-meta.xml
<CustomField>
    <fullName>MERCHANT_BOOKING_URL__c</fullName>
    <label>MERCHANT BOOKING URL</label>
    <type>Url</type>
</CustomField>