force-app/main/default/objects/TAD_Order__c/fields/Merchant_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchant Confirmation</label>
    <type>Checkbox</type>
</CustomField>