force-app/main/default/objects/TAD_Order__c/fields/Merchant_confirmation_address_3__c.field-meta.xml
<CustomField>
    <fullName>Merchant_confirmation_address_3__c</fullName>
    <label>Merchant confirmation address 3</label>
    <type>Email</type>
</CustomField>