force-app/main/default/objects/TAD_Order__c/fields/Merchant_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Confirmation_Email__c</fullName>
    <label>Merchant Confirmation Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>CXL Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>