force-app/main/default/objects/TAD_Order__c/fields/Min_Numbers_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Min_Numbers_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Numbers Email Sent</label>
    <type>Checkbox</type>
</CustomField>