force-app/main/default/objects/TAD_Order__c/fields/Min_numbers_met_OLI__c.field-meta.xml
<CustomField>
    <fullName>Min_numbers_met_OLI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min numbers met OLI</label>
    <type>Checkbox</type>
</CustomField>