force-app/main/default/objects/TAD_Order__c/fields/Mp_Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mp_Account_Phone_Number__c</fullName>
    <formula>ordexp_account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone Number</label>
    <type>Text</type>
</CustomField>