force-app/main/default/objects/TAD_Order__c/fields/MP_Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>MP_Deal_Name__c</fullName>
    <formula>ordexp_deal__r.Deal_ID_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Name</label>
    <type>Text</type>
</CustomField>