force-app/main/default/objects/TAD_Order__c/fields/mp_Rooms_Required__c.field-meta.xml
<CustomField>
    <fullName>mp_Rooms_Required__c</fullName>
    <label>Rooms Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>