force-app/main/default/objects/TAD_Order__c/fields/Net_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Net_Cancellation__c</fullName>
    <label>Net Cancellation</label>
    <summarizedField>Cancellation_Refund_POE__c.QFF_Refund__c</summarizedField>
    <summaryFilterItems>
        <field>Cancellation_Refund_POE__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Processed, Approved-Refund Not Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Cancellation_Refund_POE__c.ordexp_tad_order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>