force-app/main/default/objects/TAD_Order__c/fields/New_Account_Password__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Password__c</fullName>
    <label>New Account Password</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>