force-app/main/default/objects/TAD_Order__c/fields/No_need_to_apply_promo_coupon__c.field-meta.xml
<CustomField>
    <fullName>No_need_to_apply_promo_coupon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Auto Apply Coupon</label>
    <type>Checkbox</type>
</CustomField>