force-app/main/default/objects/TAD_Order__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>NPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>