force-app/main/default/objects/TAD_Order__c/fields/NRL_Coupon_Record__c.field-meta.xml
<CustomField>
    <fullName>NRL_Coupon_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NRL Coupon Record</label>
    <referenceTo>Generic_Records__c</referenceTo>
    <relationshipLabel>TAD Orders</relationshipLabel>
    <relationshipName>TAD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>