force-app/main/default/objects/TAD_Order__c/fields/Number_of_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Add_Ons__c</fullName>
    <label>Number of Add Ons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>