force-app/main/default/objects/TAD_Order__c/fields/Old_Credit_orders__c.field-meta.xml
<CustomField>
    <fullName>Old_Credit_orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Credit orders</label>
    <type>Checkbox</type>
</CustomField>