force-app/main/default/objects/TAD_Order__c/fields/OLI_Count__c.field-meta.xml
<CustomField>
    <fullName>OLI_Count__c</fullName>
    <label>OLI Count</label>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>