force-app/main/default/objects/TAD_Order__c/fields/OLI_Count_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>OLI_Count_Confirmed__c</fullName>
    <label>OLI Count (Confirmed)</label>
    <summaryFilterItems>
        <field>order_line_item__c.OLI_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order_line_item__c.OLI_Status__c</field>
        <operation>notEqual</operation>
        <value>On Hold</value>
    </summaryFilterItems>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>