force-app/main/default/objects/TAD_Order__c/fields/OLI_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>OLI_Credit_Amount__c</fullName>
    <label>OLI Credit Amount</label>
    <summarizedField>order_line_item__c.OLI_Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>order_line_item__c.Refund_Status__c</field>
        <operation>equals</operation>
        <value>Full Credit, Partial Credit, Partial Refund/Coupon/Credit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order_line_item__c.ordexp_approval_status__c</field>
        <operation>equals</operation>
        <value>Processed, Approved-Refund Not Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>