force-app/main/default/objects/TAD_Order__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>TAD Orders</relationshipLabel>
    <relationshipName>TAD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>