force-app/main/default/objects/TAD_Order__c/fields/Order_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Order_Acknowledgement__c</fullName>
    <label>Order Acknowledgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Acknowledged</fullName>
                <default>true</default>
                <label>Non Acknowledged</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Not Acknowledged</fullName>
                <isActive>false</isActive>
                <label>Not Acknowledged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>