force-app/main/default/objects/TAD_Order__c/fields/Order_Amended_On__c.field-meta.xml
<CustomField>
    <fullName>Order_Amended_On__c</fullName>
    <inlineHelpText>Date stamp here for order date change OR dep city change</inlineHelpText>
    <label>Order Amended On</label>
    <type>Date</type>
</CustomField>