force-app/main/default/objects/TAD_Order__c/fields/Order_Commission__c.field-meta.xml
<CustomField>
    <fullName>Order_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>