force-app/main/default/objects/TAD_Order__c/fields/Order_Conversion_Success__c.field-meta.xml
<CustomField>
    <fullName>Order_Conversion_Success__c</fullName>
    <label>Legacy Order Conversion Success</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>