force-app/main/default/objects/TAD_Order__c/fields/Order_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Created Date</label>
    <type>Date</type>
</CustomField>