force-app/main/default/objects/TAD_Order__c/fields/Order_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Expiry_Date__c</fullName>
    <formula>CASE(MOD(DATEVALUE(CreatedDate)- DATE(1900, 1, 7), 7),
0, DATEVALUE(CreatedDate) +4,
1, DATEVALUE(CreatedDate) +3,
2, DATEVALUE(CreatedDate) +3,
3, DATEVALUE(CreatedDate) +5,
4, DATEVALUE(CreatedDate) +5,
5, DATEVALUE(CreatedDate) +5,
6, DATEVALUE(CreatedDate) +5,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Expiry Date</label>
    <type>Date</type>
</CustomField>