force-app/main/default/objects/TAD_Order__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>order_line__c</referenceTo>
    <relationshipLabel>TAD Orders</relationshipLabel>
    <relationshipName>TAD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>