force-app/main/default/objects/TAD_Order__c/fields/order_summary__c.field-meta.xml
<CustomField>
    <fullName>order_summary__c</fullName>
    <label>order summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>