force-app/main/default/objects/TAD_Order__c/fields/orderexp_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>orderexp_Account_Email__c</fullName>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>