force-app/main/default/objects/TAD_Order__c/fields/orderexp_Account_Holder_Change__c.field-meta.xml
<CustomField>
    <fullName>orderexp_Account_Holder_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Holder Change</label>
    <type>Checkbox</type>
</CustomField>