force-app/main/default/objects/TAD_Order__c/fields/orderexp_Company_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>orderexp_Company_Account_Name__c</fullName>
    <formula>ordexp_account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Account Name</label>
    <type>Text</type>
</CustomField>