force-app/main/default/objects/TAD_Order__c/fields/orderexp_New_Account_Holder_Email__c.field-meta.xml
<CustomField>
    <fullName>orderexp_New_Account_Holder_Email__c</fullName>
    <label>New Account Holder Email</label>
    <type>Email</type>
</CustomField>