force-app/main/default/objects/TAD_Order__c/fields/orderxp_Block_Order_Comms__c.field-meta.xml
<CustomField>
    <fullName>orderxp_Block_Order_Comms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Order Comms</label>
    <type>Checkbox</type>
</CustomField>