force-app/main/default/objects/TAD_Order__c/fields/ordexp_account__c.field-meta.xml
<CustomField>
    <fullName>ordexp_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TAD Orders</relationshipLabel>
    <relationshipName>TAD_Orders_Account</relationshipName>
    <type>Lookup</type>
</CustomField>