force-app/main/default/objects/TAD_Order__c/fields/ordexp_accountid__c.field-meta.xml
<CustomField>
    <fullName>ordexp_accountid__c</fullName>
    <formula>ordexp_account__r.Id</formula>
    <label>Accountid</label>
    <type>Text</type>
</CustomField>