force-app/main/default/objects/TAD_Order__c/fields/ordexp_additional_surcharges__c.field-meta.xml
<CustomField>
    <fullName>ordexp_additional_surcharges__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional surcharges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>