force-app/main/default/objects/TAD_Order__c/fields/ordexp_additionoptionshtml__c.field-meta.xml
<CustomField>
    <fullName>ordexp_additionoptionshtml__c</fullName>
    <label>AdditionOptionsHTML</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>