force-app/main/default/objects/TAD_Order__c/fields/ordexp_aesb_check__c.field-meta.xml
<CustomField>
    <fullName>ordexp_aesb_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AESB Check</label>
    <type>Checkbox</type>
</CustomField>