force-app/main/default/objects/TAD_Order__c/fields/ordexp_airline_upgrade_check__c.field-meta.xml
<CustomField>
    <fullName>ordexp_airline_upgrade_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PBP-69 - Changes/Additions Required - AddOnTriggerHandler
If Airline Upgrade record type of AddOns are added to a TAD Order then please check this check box on the related TAD Order. And conversely if all Airline Upgrade record type of AddOns is deleted/cancelled please uncheck this field.</description>
    <label>Airline Upgrade Check</label>
    <type>Checkbox</type>
</CustomField>