force-app/main/default/objects/TAD_Order__c/fields/ordexp_allocation_by__c.field-meta.xml
<CustomField>
    <fullName>ordexp_allocation_by__c</fullName>
    <formula>IF(RecordType.Name==&apos;TAD&apos; || RecordType.Name==&apos;TC&apos;, Text(ordexp_deal__r.Allocation_by__c), Text(ordexp_deal__r.Allocation_By_NZ__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation By</label>
    <type>Text</type>
</CustomField>