force-app/main/default/objects/TAD_Order__c/fields/ordexp_amount_outstanding__c.field-meta.xml
<CustomField>
    <fullName>ordexp_amount_outstanding__c</fullName>
    <formula>(ordexp_nett_amount__c + TAD_Surcharge_Amount__c + ordexp_Date_City_Change_Refund__c) - (ordexp_total_payment_received__c + ( IF( Old_Credit_orders__c=true, Total_Credit_Amount__c,0 ) ) - ordexp_total_refund_amount__c - Total_Coupon_Amount__c -  
( IF( RecordType_Name__c  == &apos;Hotel&apos;, Total_QFF_Refund__c,0 ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>