force-app/main/default/objects/TAD_Order__c/fields/ordexp_approved_to_run_under_minimum__c.field-meta.xml
<CustomField>
    <fullName>ordexp_approved_to_run_under_minimum__c</fullName>
    <formula>ordexp_departure_date__r.Approved_to_Run_Under_Mins__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved to run under minimum</label>
    <type>Checkbox</type>
</CustomField>