force-app/main/default/objects/TAD_Order__c/fields/ordexp_bc_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_bc_date__c</fullName>
    <label>BC date</label>
    <type>Date</type>
</CustomField>