force-app/main/default/objects/TAD_Order__c/fields/ordexp_bc_email_sent_to_customer__c.field-meta.xml
<CustomField>
    <fullName>ordexp_bc_email_sent_to_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC email sent to customer</label>
    <type>Checkbox</type>
</CustomField>