force-app/main/default/objects/TAD_Order__c/fields/ordexp_bc_sent__c.field-meta.xml
<CustomField>
    <fullName>ordexp_bc_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC sent</label>
    <type>Checkbox</type>
</CustomField>