force-app/main/default/objects/TAD_Order__c/fields/ordexp_bedding_config__c.field-meta.xml
<CustomField>
    <fullName>ordexp_bedding_config__c</fullName>
    <label>Bedding config</label>
    <length>20</length>
    <type>Text</type>
</CustomField>