force-app/main/default/objects/TAD_Order__c/fields/ordexp_bsb_zip_payment_pending__c.field-meta.xml
<CustomField>
    <fullName>ordexp_bsb_zip_payment_pending__c</fullName>
    <label>BSB/ZIP payment pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZIP</fullName>
            </value>
            <value>
                <fullName>BSB</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>