force-app/main/default/objects/TAD_Order__c/fields/ordexp_business_unit__c.field-meta.xml
<CustomField>
    <fullName>ordexp_business_unit__c</fullName>
    <formula>RecordType.Name &amp;&quot; &quot;&amp; Travel_Escape__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>