force-app/main/default/objects/TAD_Order__c/fields/ordexp_cabin_bookings_outstanding__c.field-meta.xml
<CustomField>
    <fullName>ordexp_cabin_bookings_outstanding__c</fullName>
    <formula>Room_Cabin_Required__c - ordexp_cabins_booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabin bookings outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>