force-app/main/default/objects/TAD_Order__c/fields/ordexp_cabin_required__c.field-meta.xml
<CustomField>
    <fullName>ordexp_cabin_required__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cabin Required</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>