force-app/main/default/objects/TAD_Order__c/fields/ordexp_cabins_booked__c.field-meta.xml
<CustomField>
    <fullName>ordexp_cabins_booked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Contains count of Cabins Booked</description>
    <label>Cabins Booked</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>