force-app/main/default/objects/TAD_Order__c/fields/ordexp_call_back_type__c.field-meta.xml
<CustomField>
    <fullName>ordexp_call_back_type__c</fullName>
    <label>Call back type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>