force-app/main/default/objects/TAD_Order__c/fields/ordexp_cancellation_request__c.field-meta.xml
<CustomField>
    <fullName>ordexp_cancellation_request__c</fullName>
    <label>Cancellation request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Send Request Form</fullName>
            </value>
            <value>
                <fullName>Request Sent</fullName>
            </value>
            <value>
                <fullName>Request Actioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>