force-app/main/default/objects/TAD_Order__c/fields/ordexp_cancellation_request_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_cancellation_request_date__c</fullName>
    <label>Cancellation request date</label>
    <type>DateTime</type>
</CustomField>