force-app/main/default/objects/TAD_Order__c/fields/ordexp_Cancelled_PAX_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Cancelled_PAX_Quantity__c</fullName>
    <label>Cancelled PAX Quantity</label>
    <summarizedField>order_line_item__c.PAX_Qty__c</summarizedField>
    <summaryFilterItems>
        <field>order_line_item__c.OLI_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>