force-app/main/default/objects/TAD_Order__c/fields/ordexp_coach_colour__c.field-meta.xml
<CustomField>
    <fullName>ordexp_coach_colour__c</fullName>
    <label>Coach colour</label>
    <length>12</length>
    <type>Text</type>
</CustomField>