force-app/main/default/objects/TAD_Order__c/fields/ordexp_consultant_email__c.field-meta.xml
<CustomField>
    <fullName>ordexp_consultant_email__c</fullName>
    <label>Consultant email</label>
    <type>Email</type>
</CustomField>