force-app/main/default/objects/TAD_Order__c/fields/ordexp_consultant_name__c.field-meta.xml
<CustomField>
    <fullName>ordexp_consultant_name__c</fullName>
    <label>Consultant name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>