force-app/main/default/objects/TAD_Order__c/fields/ordexp_consultants__c.field-meta.xml
<CustomField>
    <fullName>ordexp_consultants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultants</label>
    <referenceTo>Agents__c</referenceTo>
    <relationshipLabel>TAD Orders</relationshipLabel>
    <relationshipName>TAD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>