force-app/main/default/objects/TAD_Order__c/fields/ordexp_Cruise_e_ticket_Sent__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Cruise_e_ticket_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cruise e-ticket Sent</label>
    <type>Checkbox</type>
</CustomField>