force-app/main/default/objects/TAD_Order__c/fields/ordexp_Customisations_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Customisations_Credit_Amount__c</fullName>
    <label>Customisations Credit Amount</label>
    <summarizedField>order_line_item__c.ordexp_Customisation_Credit__c</summarizedField>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>