force-app/main/default/objects/TAD_Order__c/fields/ordexp_dataloadrefresh__c.field-meta.xml
<CustomField>
    <fullName>ordexp_dataloadrefresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DataLoadRefresh</label>
    <type>Checkbox</type>
</CustomField>