force-app/main/default/objects/TAD_Order__c/fields/ordexp_Date_City_Change_Refund__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Date_City_Change_Refund__c</fullName>
    <label>Date/City Change Refund</label>
    <summarizedField>Cancellation_Refund_POE__c.Total_Cancellation_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Cancellation_Refund_POE__c.Cancellation_Type__c</field>
        <operation>equals</operation>
        <value>Departure date change, Departure city change</value>
    </summaryFilterItems>
    <summaryForeignKey>Cancellation_Refund_POE__c.ordexp_tad_order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>