force-app/main/default/objects/TAD_Order__c/fields/ordexp_day_zero_departure__c.field-meta.xml
<CustomField>
    <fullName>ordexp_day_zero_departure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day zero departure</label>
    <type>Checkbox</type>
</CustomField>